--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,21 @@ body {
 }
 
 #map {
-  height: 100vh;
-  width: 100vw;
+  display: flex;
+  height: 90vh;
+  width: 80vw;
+}
+
+.navbar {
+  display: flex;
+  height: 10vh;
+  background-color: black;
+}
+
+#sidebar {
+  display: flex;
+  justify-content: flex-end;
+  width: 20vw;
+  color: black;
+
 }
